@@ -143,7 +143,9 @@ argument_list|,
 literal|"a.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|false
 argument_list|)
@@ -157,7 +159,9 @@ argument_list|,
 literal|"b.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|false
 argument_list|)
@@ -171,7 +175,9 @@ argument_list|,
 literal|"c.props"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|false
 argument_list|)
@@ -906,7 +912,9 @@ argument_list|,
 literal|"a.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
@@ -920,7 +928,9 @@ argument_list|,
 literal|"b.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
@@ -934,7 +944,9 @@ argument_list|,
 literal|"c.props"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
@@ -1118,7 +1130,9 @@ argument_list|,
 literal|"t.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|false
 argument_list|)
@@ -1235,7 +1249,9 @@ argument_list|,
 literal|"a.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
@@ -1249,7 +1265,9 @@ argument_list|,
 literal|"b.xml"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
@@ -1263,7 +1281,9 @@ argument_list|,
 literal|"c.props"
 operator|.
 name|getBytes
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|,
 literal|true
 argument_list|)
